--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,8 @@
             </div>       
             <div class="onbutton"  id="Javascript">
                 <div class="eachProject">
-                    <h2>Nórdic, meu primeiro html</h2>
-                    <p><a href="https://joohnyfranzen.github.io/All-the-Storys-About/" target="_blank" rel="noopener noreferrer">Link Nórdic</a></p>
+                    <h2>Jogo Mario</h2>
+                    <p><a href="https://joohnyfranzen.github.io/Mario-Game/" target="_blank" rel="noopener noreferrer">Link Nórdic</a></p>
                 </div>
                 <div class="eachProject">
                     <h2>Calculadora</h2>
@@ -59,8 +59,8 @@
             </div>
             <div class="onbutton" style="display: none;" id="Laravel">
                 <div class="eachProject">
-                    <h2>Calculadora</h2>
-                    <p>Desenvolvido inteiramente em Javascript</p>
+                    <h2>...</h2>
+                    <p>Em desenvolvimento</p>
                 </div>
             </div>
         </div>
